[gd_scene load_steps=4 format=2]

[ext_resource path="res://GameTilemap.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scenes/Worldgen/world_gen.gd" type="Script" id=2]
[ext_resource path="res://Scenes/Player/Player.tscn" type="PackedScene" id=3]

[node name="WorldGen" type="Node2D"]
script = ExtResource( 2 )
__meta__ = {
"_edit_horizontal_guides_": [ 189.0 ]
}
house_amount = 30
min_house_width = 3
min_house_height = 3
max_house_width = 10
max_house_height = 10
rooftop_autotile_id = 8

[node name="Tilemaps" type="Node2D" parent="."]

[node name="TilemapGround" parent="Tilemaps" instance=ExtResource( 1 )]
tile_data = PoolIntArray( 0, 4, 0, 1, 4, 1, 2, 4, 1, 3, 4, 2, 4, 4, 2, 5, 4, 1, 6, 4, 2, 7, 4, 2, 8, 4, 2, 9, 4, 2, 10, 4, 2, 11, 4, 2, 12, 4, 2, 13, 4, 1, 14, 4, 1, 15, 4, 1, 16, 4, 1, 17, 4, 2, 18, 4, 2, 19, 4, 1, 20, 4, 2, 21, 4, 1, 22, 4, 2, 23, 4, 2, 24, 4, 2, 25, 4, 2, 26, 4, 2, 27, 4, 2, 28, 4, 2, 29, 4, 2, 30, 4, 1, 31, 4, 3, 65536, 4, 65536, 65537, 4, 131074, 65538, 4, 65538, 65539, 4, 131074, 65540, 4, 131073, 65541, 4, 131074, 65542, 4, 131073, 65543, 4, 65538, 65544, 4, 131074, 65545, 4, 131074, 65546, 4, 65538, 65547, 4, 65537, 65548, 4, 65538, 65549, 4, 131074, 65550, 4, 65537, 65551, 4, 65538, 65552, 4, 131073, 65553, 4, 131074, 65554, 4, 131074, 65555, 4, 65537, 65556, 4, 131074, 65557, 4, 65537, 65558, 4, 65538, 65559, 4, 65537, 65560, 4, 65538, 65561, 4, 131073, 65562, 4, 65537, 65563, 4, 131074, 65564, 4, 131074, 65565, 4, 65538, 65566, 4, 65537, 65567, 4, 65539, 131072, 4, 65536, 131073, 4, 65537, 131074, 4, 131074, 131075, 4, 65538, 131076, 4, 65538, 131077, 4, 131074, 131078, 4, 65538, 131079, 4, 65537, 131080, 4, 131073, 131081, 4, 65537, 131082, 4, 65538, 131083, 4, 131073, 131084, 4, 65537, 131085, 4, 65538, 131086, 4, 131073, 131087, 4, 65538, 131088, 4, 65538, 131089, 4, 65538, 131090, 4, 131074, 131091, 4, 65538, 131092, 4, 65537, 131093, 4, 131074, 131094, 4, 131073, 131095, 4, 65537, 131096, 4, 65537, 131097, 4, 65537, 131098, 4, 65538, 131099, 4, 131074, 131100, 4, 65537, 131101, 4, 65538, 131102, 4, 131074, 131103, 4, 65539, 196608, 4, 65536, 196609, 4, 131073, 196610, 4, 65538, 196611, 4, 131074, 196612, 4, 131074, 196613, 4, 65538, 196614, 4, 131074, 196615, 4, 131073, 196616, 4, 131073, 196617, 4, 65538, 196618, 4, 131074, 196619, 4, 65537, 196620, 4, 65538, 196621, 4, 131073, 196622, 4, 65537, 196623, 4, 65538, 196624, 4, 65537, 196625, 4, 65538, 196626, 4, 65537, 196627, 4, 65537, 196628, 4, 65537, 196629, 4, 65537, 196630, 4, 65537, 196631, 4, 131074, 196632, 4, 131073, 196633, 4, 65537, 196634, 4, 65538, 196635, 4, 131073, 196636, 4, 65538, 196637, 4, 131073, 196638, 4, 65537, 196639, 4, 65539, 262144, 4, 65536, 262145, 4, 65538, 262146, 4, 65538, 262147, 4, 131074, 262148, 4, 65537, 262149, 4, 131073, 262150, 4, 65538, 262151, 4, 65538, 262152, 4, 65538, 262153, 4, 131073, 262154, 4, 131073, 262155, 4, 65538, 262156, 4, 65538, 262157, 4, 65537, 262158, 4, 131074, 262159, 4, 65538, 262160, 4, 131074, 262161, 4, 65538, 262162, 4, 131074, 262163, 4, 65538, 262164, 4, 65538, 262165, 4, 131073, 262166, 4, 65538, 262167, 4, 131074, 262168, 4, 131074, 262169, 4, 65538, 262170, 4, 65538, 262171, 4, 65538, 262172, 4, 131074, 262173, 4, 65538, 262174, 4, 131074, 262175, 4, 131075, 327680, 4, 65536, 327681, 4, 65538, 327682, 4, 131073, 327683, 4, 65537, 327684, 4, 65537, 327685, 4, 65538, 327686, 4, 65538, 327687, 4, 131074, 327688, 4, 131074, 327689, 4, 131073, 327690, 4, 65537, 327691, 4, 65537, 327692, 4, 65537, 327693, 4, 131074, 327694, 4, 131074, 327695, 4, 131073, 327696, 4, 131074, 327697, 4, 131074, 327698, 4, 131074, 327699, 4, 65538, 327700, 4, 65538, 327701, 4, 65538, 327702, 4, 65537, 327703, 4, 65537, 327704, 4, 65538, 327705, 4, 131074, 327706, 4, 65538, 327707, 4, 65537, 327708, 4, 65538, 327709, 4, 131074, 327710, 4, 131073, 327711, 4, 65539, 393216, 4, 131072, 393217, 4, 131074, 393218, 4, 131073, 393219, 4, 65538, 393220, 4, 65538, 393221, 4, 131074, 393222, 4, 131073, 393223, 4, 65537, 393224, 4, 65537, 393225, 4, 131074, 393226, 4, 131073, 393227, 4, 131073, 393228, 4, 65538, 393229, 4, 131073, 393230, 4, 131074, 393231, 4, 131073, 393232, 4, 131074, 393233, 4, 131073, 393234, 4, 131074, 393235, 4, 131074, 393236, 4, 65538, 393237, 4, 65537, 393238, 4, 65538, 393239, 4, 131073, 393240, 4, 65538, 393241, 4, 65538, 393242, 4, 131074, 393243, 4, 65538, 393244, 4, 131073, 393245, 4, 65538, 393246, 4, 131074, 393247, 4, 131075, 458752, 4, 131072, 458753, 4, 131074, 458754, 4, 65538, 458755, 4, 131073, 458756, 4, 131073, 458757, 4, 65537, 458758, 4, 131073, 458759, 4, 65537, 458760, 4, 131073, 458761, 4, 65537, 458762, 4, 65538, 458763, 4, 65537, 458764, 4, 131074, 458765, 4, 131073, 458766, 4, 65538, 458767, 4, 131073, 458768, 4, 131074, 458769, 4, 65537, 458770, 4, 131074, 458771, 4, 65537, 458772, 4, 131073, 458773, 4, 131073, 458774, 4, 131074, 458775, 4, 131073, 458776, 4, 65538, 458777, 4, 65537, 458778, 4, 131074, 458779, 4, 65537, 458780, 4, 65537, 458781, 4, 131073, 458782, 4, 131073, 458783, 4, 131075, 524288, 4, 65536, 524289, 4, 65538, 524290, 4, 131074, 524291, 4, 65537, 524292, 4, 65538, 524293, 4, 131074, 524294, 4, 131073, 524295, 4, 65538, 524296, 4, 131073, 524297, 4, 65537, 524298, 4, 131074, 524299, 4, 131074, 524300, 4, 65537, 524301, 4, 131073, 524302, 4, 65537, 524303, 4, 65538, 524304, 4, 131074, 524305, 4, 131073, 524306, 4, 131073, 524307, 4, 131073, 524308, 4, 131073, 524309, 4, 131074, 524310, 4, 65537, 524311, 4, 65537, 524312, 4, 65537, 524313, 4, 65538, 524314, 4, 131073, 524315, 4, 131073, 524316, 4, 65538, 524317, 4, 131074, 524318, 4, 65537, 524319, 4, 131075, 589824, 4, 65536, 589825, 4, 65537, 589826, 4, 65538, 589827, 4, 65538, 589828, 4, 65537, 589829, 4, 131073, 589830, 4, 131073, 589831, 4, 131074, 589832, 4, 131074, 589833, 4, 65538, 589834, 4, 131074, 589835, 4, 65538, 589836, 4, 65538, 589837, 4, 65538, 589838, 4, 131073, 589839, 4, 131074, 589840, 4, 131074, 589841, 4, 131073, 589842, 4, 131074, 589843, 4, 65538, 589844, 4, 65537, 589845, 4, 131074, 589846, 4, 65537, 589847, 4, 131074, 589848, 4, 131074, 589849, 4, 65537, 589850, 4, 65538, 589851, 4, 131074, 589852, 4, 65537, 589853, 4, 65538, 589854, 4, 131073, 589855, 4, 65539, 655360, 4, 131072, 655361, 4, 65538, 655362, 4, 131074, 655363, 4, 131073, 655364, 4, 65537, 655365, 4, 65537, 655366, 4, 131074, 655367, 4, 65538, 655368, 4, 131074, 655369, 4, 65538, 655370, 4, 65537, 655371, 4, 131074, 655372, 4, 131073, 655373, 4, 131073, 655374, 4, 65537, 655375, 4, 65537, 655376, 4, 131073, 655377, 4, 65538, 655378, 4, 131073, 655379, 4, 65538, 655380, 4, 131073, 655381, 4, 131074, 655382, 4, 65537, 655383, 4, 65538, 655384, 4, 131073, 655385, 4, 65538, 655386, 4, 65538, 655387, 4, 131074, 655388, 4, 131074, 655389, 4, 131074, 655390, 4, 131074, 655391, 4, 131075, 720896, 4, 131072, 720897, 4, 131074, 720898, 4, 131074, 720899, 4, 131073, 720900, 4, 65537, 720901, 4, 131073, 720902, 4, 65537, 720903, 4, 131073, 720904, 4, 65538, 720905, 4, 65537, 720906, 4, 65537, 720907, 4, 131074, 720908, 4, 65537, 720909, 4, 65538, 720910, 4, 131074, 720911, 4, 131073, 720912, 4, 131073, 720913, 4, 65537, 720914, 4, 131074, 720915, 4, 65538, 720916, 4, 65537, 720917, 4, 131074, 720918, 4, 65538, 720919, 4, 65538, 720920, 4, 65538, 720921, 4, 131073, 720922, 4, 131073, 720923, 4, 131074, 720924, 4, 65537, 720925, 4, 65538, 720926, 4, 131074, 720927, 4, 65539, 786432, 4, 65536, 786433, 4, 131073, 786434, 4, 65537, 786435, 4, 131074, 786436, 4, 131073, 786437, 4, 131074, 786438, 4, 131074, 786439, 4, 65538, 786440, 4, 65537, 786441, 4, 65538, 786442, 4, 131073, 786443, 4, 131074, 786444, 4, 131074, 786445, 4, 131074, 786446, 4, 131074, 786447, 4, 65537, 786448, 4, 65538, 786449, 4, 65538, 786450, 4, 131073, 786451, 4, 131073, 786452, 4, 65537, 786453, 4, 131073, 786454, 4, 65538, 786455, 4, 65537, 786456, 4, 131073, 786457, 4, 65537, 786458, 4, 65537, 786459, 4, 131074, 786460, 4, 131074, 786461, 4, 65538, 786462, 4, 131074, 786463, 4, 65539, 851968, 4, 65536, 851969, 4, 65537, 851970, 4, 65537, 851971, 4, 131074, 851972, 4, 65538, 851973, 4, 131073, 851974, 4, 131074, 851975, 4, 65537, 851976, 4, 131074, 851977, 4, 131074, 851978, 4, 131073, 851979, 4, 131074, 851980, 4, 65537, 851981, 4, 65537, 851982, 4, 65537, 851983, 4, 131074, 851984, 4, 65537, 851985, 4, 65538, 851986, 4, 65537, 851987, 4, 65537, 851988, 4, 65537, 851989, 4, 131073, 851990, 4, 65537, 851991, 4, 131074, 851992, 4, 65537, 851993, 4, 131073, 851994, 4, 131073, 851995, 4, 131073, 851996, 4, 65538, 851997, 4, 65538, 851998, 4, 65537, 851999, 4, 65539, 917504, 4, 131072, 917505, 4, 131073, 917506, 4, 65538, 917507, 4, 65537, 917508, 4, 65538, 917509, 4, 65538, 917510, 4, 65538, 917511, 4, 131074, 917512, 4, 131074, 917513, 4, 65538, 917514, 4, 65538, 917515, 4, 131073, 917516, 4, 65538, 917517, 4, 131073, 917518, 4, 131073, 917519, 4, 131074, 917520, 4, 65537, 917521, 4, 65537, 917522, 4, 65537, 917523, 4, 131074, 917524, 4, 131074, 917525, 4, 65538, 917526, 4, 65538, 917527, 4, 65537, 917528, 4, 131073, 917529, 4, 131074, 917530, 4, 65537, 917531, 4, 131074, 917532, 4, 131074, 917533, 4, 131074, 917534, 4, 65538, 917535, 4, 131075, 983040, 4, 131072, 983041, 4, 65537, 983042, 4, 65538, 983043, 4, 131074, 983044, 4, 65538, 983045, 4, 131074, 983046, 4, 65538, 983047, 4, 65537, 983048, 4, 65537, 983049, 4, 131074, 983050, 4, 65538, 983051, 4, 131074, 983052, 4, 65537, 983053, 4, 65538, 983054, 4, 65538, 983055, 4, 65537, 983056, 4, 65537, 983057, 4, 131073, 983058, 4, 131074, 983059, 4, 131074, 983060, 4, 65537, 983061, 4, 65538, 983062, 4, 131074, 983063, 4, 131074, 983064, 4, 65538, 983065, 4, 131073, 983066, 4, 65537, 983067, 4, 65538, 983068, 4, 131073, 983069, 4, 131073, 983070, 4, 65537, 983071, 4, 65539, 1048576, 4, 65536, 1048577, 4, 65538, 1048578, 4, 65537, 1048579, 4, 65537, 1048580, 4, 65537, 1048581, 4, 131074, 1048582, 4, 131073, 1048583, 4, 131073, 1048584, 4, 131074, 1048585, 4, 65537, 1048586, 4, 131073, 1048587, 4, 65537, 1048588, 4, 131074, 1048589, 4, 131074, 1048590, 4, 65538, 1048591, 4, 65538, 1048592, 4, 131074, 1048593, 4, 131074, 1048594, 4, 131073, 1048595, 4, 65537, 1048596, 4, 131074, 1048597, 4, 131074, 1048598, 4, 65538, 1048599, 4, 131074, 1048600, 4, 131074, 1048601, 4, 65537, 1048602, 4, 65537, 1048603, 4, 65537, 1048604, 4, 131073, 1048605, 4, 65538, 1048606, 4, 131073, 1048607, 4, 131075, 1114112, 4, 131072, 1114113, 4, 65538, 1114114, 4, 131074, 1114115, 4, 131073, 1114116, 4, 131073, 1114117, 4, 65538, 1114118, 4, 131073, 1114119, 4, 65537, 1114120, 4, 131073, 1114121, 4, 65538, 1114122, 4, 131073, 1114123, 4, 65538, 1114124, 4, 131074, 1114125, 4, 131074, 1114126, 4, 65537, 1114127, 4, 65537, 1114128, 4, 65538, 1114129, 4, 131073, 1114130, 4, 65538, 1114131, 4, 65537, 1114132, 4, 131073, 1114133, 4, 65537, 1114134, 4, 65537, 1114135, 4, 65537, 1114136, 4, 65537, 1114137, 4, 131074, 1114138, 4, 65538, 1114139, 4, 131073, 1114140, 4, 131074, 1114141, 4, 65538, 1114142, 4, 131074, 1114143, 4, 131075, 1179648, 4, 196608, 1179649, 4, 196609, 1179650, 4, 196609, 1179651, 4, 196610, 1179652, 4, 196610, 1179653, 4, 196610, 1179654, 4, 196610, 1179655, 4, 196610, 1179656, 4, 196610, 1179657, 4, 196610, 1179658, 4, 196609, 1179659, 4, 196609, 1179660, 4, 196609, 1179661, 4, 196610, 1179662, 4, 196610, 1179663, 4, 196609, 1179664, 4, 196609, 1179665, 4, 196610, 1179666, 4, 196610, 1179667, 4, 196609, 1179668, 4, 196610, 1179669, 4, 196610, 1179670, 4, 196610, 1179671, 4, 196610, 1179672, 4, 196609, 1179673, 4, 196609, 1179674, 4, 196609, 1179675, 4, 196610, 1179676, 4, 196609, 1179677, 4, 196609, 1179678, 4, 196610, 1179679, 4, 196611 )

[node name="TilemapBuildings" parent="Tilemaps" instance=ExtResource( 1 )]
tile_data = PoolIntArray( 1245208, 8, 196611 )

[node name="TilemapPrefabs" parent="Tilemaps" instance=ExtResource( 1 )]
tile_data = PoolIntArray(  )

[node name="Enemies" type="Node2D" parent="."]

[node name="Player" parent="." instance=ExtResource( 3 )]
position = Vector2( 26, 473 )
